# echo-substrate-v4

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  EXECUTIVE_SLIDES_CONTENT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
artofproof_presentation/: architecture_data_flow.html  implementation_roadmap.html  problem_opportunity.html  slide_state.json  success_metrics.html  title_slide.html
docs/: ARTOFPROOF_EXECUTIVE_SLIDES.md  ART_OF_PROOF_INTEGRATION_PLAN.md  CALLBACK_SECRET_SECURITY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Echo_Substrate_v4_Postman_Collection.json  FINAL_STATUS_REPORT.md  GITHUB_REPO_AUDIT.md
presentation/: architecture.html  constraints.html  deployment.html  problem_solution.html  slide_state.json  title_slide.html
src/: __init__.py
src/agents/: base_agent.py  example_agents.py
src/api/: main.py
src/interpretation/: boundaries.md  non-derivable_claims.md  prohibited_inferences.md
src/organs/: arbiter.py  immune_system.py  metabolism.py  models.py
src/utils/: callback_security.py  semantic_validator.py  watermark.py
tests/: test_oracle_attacks.py  test_organs.py  test_semantic_validation.py
